--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,16 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">{{ page.date | date_to_string }}
+        {{ post.category }} .
+        <small> Tags:
+            {% for tag in post.tags %}
+            <a href="/tags/{{ tag }}" title="View posts tagged with &quot;&quot;;"><u>{{ tag }}</u></a>
+            {% if forloop.last != true %} {% endif %}
+            {% endfor %}
+        </small>
+
+  </span>
   {{ content }}
 </div>
 
