--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}
-        {{ post.category }} .
+        {{ page.category }} .
         <small> Tags:
-            {% for tag in post.tags %}
+            {% for tag in page.tags %}
             <a href="/tags/{{ tag }}" title="View posts tagged with &quot;&quot;;"><u>{{ tag }}</u></a>
             {% if forloop.last != true %} {% endif %}
             {% endfor %}
