--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,30 @@
 ---
 layout: default
 ---
+{% if post.tags.size > 0 %}
+    {% capture tags_content %}Posted with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+    {% for post_tag in post.tags %}
+        {% for data_tag in site.data.tags %}
+            {% if data_tag.slug == post_tag %}
+                {% assign tag = data_tag %}
+            {% endif %}
+        {% endfor %}
+        {% if tag %}
+            {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+            {% assign tags_content = tags_content_temp %}
+        {% endif %}
+    {% endfor %}
+{% else %}
+    {% assign tags_content = '' %}
+{% endif %}
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}
         <br/>
         {{ page.category }} .
-        <small> Tags:
-            {% for tag in page.tags %}
-            <a href="/tags/{{ tag }}" title="View posts tagged with &quot;&quot;;"><u>{{ tag }}</u></a>
-            {% if forloop.last != true %} {% endif %}
-            {% endfor %}
+        <small>
+        {{ tags_content }}
         </small>
 
   </span>
