tries to fix unsluged tags

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,13 +7,18 @@ layout: default
 {% if post.tags.size > 0 %}
     {% capture tags_content %}Posted with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
     {% for post_tag in post.tags %}
-        {% for data_tag in site.data.tags %}
-            {% if data_tag.slug == post_tag %}
-                {% assign tag = data_tag %}
+        {% if site.data.tags[post_tag] %}
+            {% for data_tag in site.data.tags %}
+                {% if data_tag.slug == post_tag %}
+                    {% assign tag = data_tag %}
+                {% endif %}
+            {% endfor %}
+            {% if tag %}
+                {% capture tags_content_temp %}{{ tags_content }}<a href="/tags/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+                {% assign tags_content = tags_content_temp %}
             {% endif %}
-        {% endfor %}
-        {% if tag %}
-            {% capture tags_content_temp %}{{ tags_content }}<a href="/tags/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+        {% else %}
+            {% capture tags_content_temp %}{{ tags_content }}<a href="/tags/{{ post_tag }}/">{{ post_tag }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
             {% assign tags_content = tags_content_temp %}
         {% endif %}
     {% endfor %}
