changes look of category

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}
         <br/>
-        {{ page.category }} .
+        <strong>{{ page.category }} </strong>
         <small>
         {{ tags_content }}
         </small>
