--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -3,10 +3,14 @@ layout: default
 ---
 
 <h1>Articles related to {{ page.tag }}</h1>
-<div>
+<div class="posts">
     {% if site.tags[page.tag] %}
         {% for post in site.tags[page.tag] %}
-            <a href="{{ post.url }}/">{{ post.title }}</a>
+        <div class="post">
+            <h1 class="post-title"><a href="{{ post.url }}/">{{ post.title }}</a></h1>
+            <span class="post-date"><strong>{{ post.date | date_to_string }}</strong>{{ post.category }}</span>
+            {{ post.summary }}
+        </div>
         {% endfor %}
     {% else %}
         <p>There are no posts for this tag.</p>
