trying to show the path of the file

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
         <br/>
         <strong>{{ page.category }} </strong>
         <small>
-        {{ tags_content }}
+            {{ tags_content }}, {{ page.path }}
         </small>
 
   </span>
