commented out date in post layout to see if it helps

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 {% include gen_tags_content.html %}
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}
+  <span class="post-date">><!-- {{ page.date | date_to_string }}-->
         <br/>
         <strong>{{ page.category }} </strong>
         <small>
