--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -5,6 +5,7 @@ layout: default
 {% capture post_dir %}{{ page.dir | split:"/" | first }}{% endcapture %}
 
 <div> Dir = {{ post_dir }} </div>
+<div> page.dir = {{ page.dir }} </div>
 
 {% if post_dir == '_posts' %}
    {% include published_post.html %}
