--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -3,13 +3,14 @@ layout: default
 ---
 
 <h1>Articles related to {{ page.tag }}</h1>
-<div class="posts">
+<div class="listing">
     {% if site.tags[page.tag] %}
         {% for post in site.tags[page.tag] %}
-        <div class="post">
-            <h3 class="post-title"><a href="{{ post.url }}/">{{ post.title }}</a></h3>
-            <!--<span class="post-date"><strong>{{ post.date | date_to_string }}</strong> {{ post.category }}</span>-->
-            {{ post.summary }}
+        <div class="post other link">
+            <h2><a href="{{ post.url }}/">{{ post.title }}</a></h2>
+            <p class="post-date">{{ post.date | date_to_string }} </p>
+                <!-- {{ post.category }} --> 
+                {{ post.summary }}
         </div>
         {% endfor %}
     {% else %}
