--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-
+<html>
+<head>
   {% include head.html %}
+</head>
+<body>
+  {% include header.html %}
+  <div class="container">
+    <p class="intro">
+      {{ site.intro }}
+    </p>
+  {{ content }}
 
-  <body>
-
-    <div class="container content">
-      <div class="masthead">
-        <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
-        </h3>
-      </div>
-
-      {{ content }}
-
-      <div class="footer">
-        <p>
-          &copy; {{ site.time | date: '%Y' }}. All rights reserved.
-        </p>
-      </div>
-    </div>
-
-  </body>
+  {% include footer.html %}
+  </div><!-- /.main -->
+</body>
 </html>
