moves the word Posted over in post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <h2>{{ page.title }}</h2>
 <p class="meta">
 <!-- <strong> {{ page.category }} </strong> -->
-{{ page.date | date_to_string }}<small>{{ tags_content }}</small>
+{{ page.date | date_to_string }}&nbsp;<small>{{ tags_content }}</small>
 </p>
 
 <div class="post">
