--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-{% include gen_tags_content.liquid %}
 {% include detect_drafts.liquid %}
+{% include tags_content.liquid %}
 
 <h2>{{ page.title }}</h2>
 <p class="meta">
@@ -12,7 +12,7 @@ layout: default
     <!-- Drafts don't get parsed as posts, so they don't have a date --> 
     {{ page.date | date_to_string }}
 {% endunless %}
-&nbsp;<small>{{ tags_content }}</small>
+&nbsp;<small>{{ tags_list }}</small>
 </p>
 
 <div class="post">
