--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <header>
       <ul class="nav">
         <!--Change the  URL here if working on an absolute domain-->
-        <li><a href="/"><span class="mega-octicon" style="margin-right: 6px;"><img src="weasel.svg" style="width:32px;vertical-align:middle"/></span>Home</a></li>
+        <li><a href="/"><span class="mega-octicon" style="margin-right: 6px;"><img src="/weasel.svg" style="width:32px;vertical-align:middle"/></span>Home</a></li>
         <li><a href="/about"><span class="mega-octicon octicon-person" style="margin-right: 6px;"></span>About</a></li>
       </ul>
   </header>
