adding comment to header to explain the weasel

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
+<!-- weasel icon is an outline of a mustelidae weasel, mostly found in the arctic. 
+It was traced from an icon on https://www.hscripts.com/freeimages/icons/wild-animals/weasel.php
+who offers their clip art use for free -->
 <div class="header-container">
   <header>
       <ul class="nav">
