debuggign category layout

--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<h2>{ page.categorypages }</h2>
 <div class="listing">
     {% for post in page.categorypages %}
     <div class="post other link">
