--- a/_layouts/categorypage.html
+++ b/_layouts/categorypage.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h2>{{ page.category }}</h2>
+<!--<h2>{{ page.category }}</h2>-->
 <div class="listing">
     {% for post in site.categories[page.category] %}
     <div class="post other link">
