attempting to fix categories

--- a/_layouts/categorypage.html
+++ b/_layouts/categorypage.html
@@ -2,10 +2,22 @@
 layout: default
 ---
 <!--<h2>{{ page.category }}</h2>-->
+
+{% comment %}
+Allows Category tag of cateogypage pages to specify multiple categories 
+{% endcomment %}
+{% assign all_categories = ""%}
+{% for cat in page.category %}
+    {% capture all_categories %}{{ all_categories }}{{ cat | replace:" ","|" }}{% if forloop.last != true %}|{% endif %}{% endcapture %}
+{% endfor %}
+{% assign all_categories = all_categories | split:"|" %}
+
 <div class="listing">
-    {% for cat in page.category %}
+    {% for cat in all_categories %}
     {% for post in site.categories[cat] %}
-    {% commment %}    {% for post in site.categories[page.category] %} {% endcomment %}
+    {% commment %}
+    {% for cat in page.category %}
+    {% for post in site.categories[page.category] %} {% endcomment %}
     <div class="post other link">
     {% comment %} Custom Icons for Categories {% endcomment %}
     {% assign caticon = "file-text" %}
