--- a/_layouts/categorypage.html
+++ b/_layouts/categorypage.html
@@ -23,12 +23,14 @@ layout: default
     {% endfor %}
     <h2><span class="mega-octicon octicon-{{ caticon }}" style="min-width: 32px;"></span><a href="{{post.url}}">{{ post.title }}</a></h2>
       <p class="post-date">{{ post.date | date_to_string }}
+      {% if post.tags.size > 0 %}
       <small> Tags:
         {% for tag in post.tags %}
         <a href="/tags/{{ tag }}"><u>{{ tag }}</u></a>
             {% if forloop.last != true %}, {% endif %}
         {% endfor %}
       </small>
+      {% endif %}
     </p>
     {{ post.summary }}
     <!-- <p> {{ post.excerpt }}</p> -->
