--- a/css/base2.css
+++ b/css/base2.css
@@ -419,13 +419,25 @@ p > a > img {
 ----------------------------------------------------------------------------*/
 
 pre {
-  margin: 16px 0;
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  word-break: break-all;
+  word-wrap: break-word;
+  color: #333333;
+  background-color: whitesmoke;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+
+/*  margin: 16px 0;
   padding: 10px;
   color: #444;
   background: #fff;
   border-bottom: 1px solid #eee;
   border-radius: 4px;
-  overflow: auto;
+  overflow: auto;*/
   -webkit-font-smoothing: subpixel-antialiased;
 }
 code{
