--- a/css/base2.css
+++ b/css/base2.css
@@ -429,15 +429,15 @@ pre {
   color: #333333;
   background-color: whitesmoke;
   border: 1px solid #cccccc;
-  border-radius: 4px;
+/*  border-radius: 4px; */
 
 /*  margin: 16px 0;
   padding: 10px;
   color: #444;
   background: #fff;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eee; */
   border-radius: 4px;
-  overflow: auto;*/
+  overflow: auto;
   -webkit-font-smoothing: subpixel-antialiased;
 }
 code{
