I like the way it looks now

--- a/css/base2.css
+++ b/css/base2.css
@@ -419,6 +419,7 @@ p > a > img {
 ----------------------------------------------------------------------------*/
 
 pre {
+ /* modified by dan to make code be inside gray area */
   display: block;
   padding: 9.5px;
   margin: 0 0 10px;
