--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--link rel="stylesheet" href="{{ site.url }}/css/base.min.css" type="text/css" /-->
-<link rel="stylesheet" href="{{ site.url }}/css/base2.css" type="text/css" />
+<link rel="stylesheet" href="{{ site.url }}/css/base2.min.css" type="text/css" />
 <link rel="stylesheet" href="{{ site.url }}/css/github.min.css" type="text/css" />
 <link rel="stylesheet" href="{{ site.url }}/css/octicons.css" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
