testing adding a footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,3 +30,8 @@
 //  })();
 </script>
 -->
+<div class="footer-container">
+    <footer>
+Copyright © 2011 - 2015 <em>WeaselPipe.com</em>. All rights reserved.
+    </footer>
+</div>
