--- a/css/base2.css
+++ b/css/base2.css
@@ -90,6 +90,7 @@ header {
 
 footer {
    margin: 20px 0 0 0;
+   padding: 12px 0 10px 0;
    text-align: right;
    background-color: #eee;
    font-size: 13px;
