--- a/css/base2.css
+++ b/css/base2.css
@@ -89,7 +89,7 @@ header {
 }
 
 footer {
-   margin: 20px 0 0 0;
+   margin: 20px 20px 0 0;
    padding: 12px 0 10px 0;
    text-align: right;
    background-color: #eee;
